# medi

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM_ROADMAP.md  LANG_SPEC.md  LICENSE  README-MediCMM.md  README-TolvexCMM.md  README.md  REBRAND.md  SELF_HOSTING.md  TODO.md  TOLVEX.md  codecov.yml  debug_minimal.rs  debug_simple.rs  debug_test.medi  index.html  package-lock.json  package.json  sitemap.xml
bindings/pymedi/: Cargo.toml  pyproject.toml
bindings/pymedi/examples/: fhir_demo.py
bindings/pymedi/src/: lib.rs
bindings/pymedi/tests/: test_pymedi_basic.py
bindings/pytolvex/: Cargo.toml  README.md  pyproject.toml  requirements-dev.txt
bindings/pytolvex/examples/: mean_demo.py
bindings/pytolvex/src/: lib.rs
compiler/: Cargo.toml  lib.rs
compiler/benches/: Cargo.toml  benchmark.rs  benchmark_healthcare_workloads.rs  benchmark_large_file.rs  benchmark_lexers.rs  benchmark_parser.rs  benchmark_parser_scaling.rs  benchmark_plot_scaling.rs  borrow_checker_bench.rs  codegen_bench.rs  generate_sized_files.rs  generate_test_file.rs  large_test_file.medi  large_test_file.tlvx  lexer_benchmark.rs  lexer_simple_benchmark.rs  parse_profile.rs  run_benchmarks.rs  simple_benchmark.rs
compiler/benches/benchdata/: comparison_report.md  healthcare_workloads_1766536650.json  healthcare_workloads_1766536650.md  healthcare_workloads_1766541196.json  healthcare_workloads_1766549536.json  healthcare_workloads_1766549536.md  healthcare_workloads_1766549962.json  healthcare_workloads_1766549962.md  healthcare_workloads_1766551398.json  healthcare_workloads_1766551398.md  healthcare_workloads_1766551695.json  healthcare_workloads_1766551695.md  healthcare_workloads_1766552040.json  healthcare_workloads_1766552040.md  healthcare_workloads_latest.json  healthcare_workloads_latest.md  large_expr_256k.tlvx  large_expr_2m.tlvx  large_expr_512k.medi  large_func_256k.tlvx  large_func_2m.medi  large_func_512k.medi  scaling_1756027996.csv  scaling_1756027996.json
compiler/benches/python/: workloads.py
compiler/benches/r/: workloads.R
compiler/benches/scripts/: generate_comparison_report.py
compiler/medic/: Cargo.toml
compiler/medic/src/: docgen.rs  lib.rs  main.rs
compiler/medic_ast/: Cargo.toml  README.md
compiler/medic_ast/examples/: ast_visitor_example.rs
compiler/medic_ast/src/: ast.rs  conversions.rs  lib.rs  visit.rs
compiler/medic_ast/tests/: ast_tests.rs
compiler/medic_borrowck/: Cargo.toml
compiler/medic_borrowck/src/: lib.rs
compiler/medic_codegen_llvm/: Cargo.toml  README.md
compiler/medic_codegen_llvm/src/: lib.rs
compiler/medic_env/: Cargo.toml
compiler/medic_env/src/: env.rs  lib.rs
compiler/medic_ide_server/: Cargo.toml
compiler/medic_ide_server/src/: main.rs
compiler/medic_lexer/: Cargo.toml  README.md
compiler/medic_lexer/benches/: lexer_benchmark.rs
compiler/medic_lexer/examples/: streaming_lexer_demo.rs
compiler/medic_lexer/src/: chunked_lexer.rs  chunked_lexer.rs.bak  convert.rs  lexer.rs  lib.rs  logos_token.rs  streaming_lexer.rs  string_interner.rs  token.rs
compiler/medic_lexer/tests/: lexer_tests.rs  memory_usage.rs  parser_integration.rs
compiler/medic_parser/: Cargo.toml
compiler/medic_parser/docs/: parser_acceptance_checklist.md  parser_architecture.md  parsing_approach.md
compiler/medic_parser/src/: lib.rs  parser.rs
compiler/medic_parser/tests/: assignment_statements_test.rs  binary_expression_precedence.rs  function_parse.rs  if_statement_test.rs  match_expression_test.rs  match_statement_test.rs  member_expressions_test.rs  mod.rs  parser_acceptance_skeleton.rs  test_utils.rs  token_stream_test.rs  while_statement_test.rs
compiler/medic_runtime/: Cargo.toml  README.md
compiler/medic_runtime/benches/: gc_benches.rs  scheduler_benches.rs
compiler/medic_runtime/examples/: rt_iot.rs
compiler/medic_runtime/src/: distributed.rs  error.rs  gc.rs  lib.rs  rt.rs  scheduler.rs  task_group.rs
compiler/medic_runtime/tests/: channel_crossbeam.rs  distributed.rs  gc_healthcare_stress.rs  scheduler_stress.rs
compiler/medic_type/: Cargo.toml
compiler/medic_type/src/: domain.rs  lib.rs  traits.rs  types.rs
compiler/medic_typeck/: Cargo.toml
compiler/medic_typeck/src/: compliance.rs  lib.rs  runtime.rs  type_checker.rs  units.rs
compiler/medipack/: Cargo.toml
compiler/medipack/src/: main.rs  manifest.rs
compiler/medipack/tests/: e2e.rs
compiler/tlvxc/: Cargo.toml
compiler/tlvxc/src/: docgen.rs  lib.rs  main.rs
compiler/tlvxc_ast/: Cargo.toml
compiler/tlvxc_ast/examples/: ast_visitor_example.rs
compiler/tlvxc_ast/src/: ast.rs  conversions.rs  lib.rs
compiler/tlvxc_ast/tests/: ast_tests.rs
compiler/tlvxc_borrowck/: Cargo.toml
compiler/tlvxc_borrowck/src/: lib.rs
compiler/tlvxc_codegen_llvm/: Cargo.toml
compiler/tlvxc_codegen_llvm/src/: lib.rs
compiler/tlvxc_env/: Cargo.toml
compiler/tlvxc_env/src/: env.rs
compiler/tlvxc_ide_server/: Cargo.toml
compiler/tlvxc_ide_server/src/: main.rs
compiler/tlvxc_lexer/: Cargo.toml
compiler/tlvxc_lexer/docs/: pipeline_operator_lexer_design.md
compiler/tlvxc_lexer/examples/: streaming_lexer_demo.rs
compiler/tlvxc_parser/: Cargo.toml
compiler/tlvxc_runtime/: Cargo.toml  README.md
compiler/tlvxc_type/: Cargo.toml
compiler/tlvxc_typeck/: Cargo.toml
compiler/tolvexpack/: Cargo.toml
stdlib/medi_ai/: Cargo.toml  README.md
stdlib/medi_compliance/: Cargo.toml  README.md
stdlib/medi_data/: Cargo.toml  README.md
stdlib/medi_model/: Cargo.toml  README.md
stdlib/medi_standards/: Cargo.toml
stdlib/medi_stats/: Cargo.toml
stdlib/tolvex_ai/: Cargo.toml
stdlib/tolvex_standards/: Cargo.toml
stdlib/tolvex_stats/: Cargo.toml  README.md
tests/: Cargo.toml  README.md  ast_printer_demo.rs  healthcare_parser_typechecker.rs  lexer_tests.rs  parser_tests.rs  type_decl_integration.rs
tests/src/: hipaa.rs  integration_exec.rs  ir_codegen_tests.rs  let_annotations.rs  lib.rs  privacy.rs  riscv_codegen_tests.rs  riscv_size_tests.rs  x86_codegen_tests.rs
(+533 files in other folders)
