[workspace]
resolver = "2"
members = [
    "compiler/medic",
    "compiler/medic_ast",
    "compiler/medic_env",
    "compiler/medic_lexer",
    "compiler/medic_parser",
    "compiler/medic_type",
    "compiler/medic_typeck",
    "compiler/medic_codegen_llvm",
    "compiler/medic_ide_server",
    "compiler/benches",
    "tests",
    "stdlib/medi_data",
    "stdlib/medi_stats",
    "stdlib/medi_compliance",
    "stdlib/medi_ai", "stdlib/medi_model",
    "bindings/pymedi",
]
