[workspace]
resolver = "2"
members = [
    "compiler/tlvxc",
    "compiler/tolvexpack",
    "compiler/tlvxc_ast",
    "compiler/tlvxc_env",
    "compiler/tlvxc_lexer",
    "compiler/tlvxc_parser",
    "compiler/tlvxc_type",
    "compiler/tlvxc_typeck",
    "compiler/tlvxc_codegen_llvm",
    "compiler/tlvxc_ide_server",
    "compiler/benches",
    "tests",
    "stdlib/tolvex_core",
    "stdlib/tolvex_data",
    "stdlib/tolvex_standards",
    "stdlib/tolvex_stats",
    "stdlib/tolvex_compliance",
    "stdlib/tolvex_privacy",
    "stdlib/tolvex_rt",
    "stdlib/tolvex_ai", "stdlib/tolvex_model",
    "bindings/pytolvex",
]
