[workspace]
resolver = "2"
members = [
    "medic",
    "medic_ast",
    "medic_env",
    "medic_lexer",
    "medic_parser",
    "medic_type",
    "medic_typeck",
    "medic_ide_server",
    "medic_codegen_llvm",
    "benches",
    "medic_borrowck",
    "medic_runtime"
]

[workspace.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
