[workspace]
resolver = "2"
members = [
    "tlvxc",
    "tlvxc_ast",
    "tlvxc_env",
    "tlvxc_lexer",
    "tlvxc_parser",
    "tlvxc_type",
    "tlvxc_typeck",
    "tlvxc_ide_server",
    "tlvxc_codegen_llvm",
    "tlvxc_borrowck",
    "tlvxc_runtime",
    "tolvexpack",
    "benches"
]

[workspace.dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
