[package]
name = "tests"
version = "0.1.15"
edition = "2021"

description = "Integration and system tests for the Medic compiler."

[dependencies]
tlvxc_ast = { path = "../compiler/tlvxc_ast" }
tlvxc_env = { path = "../compiler/tlvxc_env" }
tlvxc_type = { path = "../compiler/tlvxc_type" }
tlvxc_typeck = { path = "../compiler/tlvxc_typeck" }
tlvxc_lexer = { path = "../compiler/tlvxc_lexer" }
tlvxc_parser = { path = "../compiler/tlvxc_parser" }
tlvxc_codegen_llvm = { path = "../compiler/tlvxc_codegen_llvm", features = ["llvm", "quantity_ir"] }
