[package]
name = "pymedi"
version = "0.1.4"
edition = "2021"

[lib]
name = "pymedi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
medi_stats = { path = "../../stdlib/medi_stats" }
medi_data = { path = "../../stdlib/medi_data" }

[features]
# Enable this when building via maturin/pip. Kept explicit to avoid surprises in normal Rust builds.
extension-module = ["pyo3/extension-module"]
