[package]
name = "medic_benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_test_file"
path = "generate_test_file.rs"

[[bin]]
name = "benchmark_lexers"
path = "benchmark_lexers.rs"

[[bin]]
name = "benchmark_large_file"
path = "benchmark_large_file.rs"

[[bin]]
name = "run_benchmarks"
path = "run_benchmarks.rs"

[[bin]]
name = "benchmark_parser"
path = "benchmark_parser.rs"

[[bin]]
name = "generate_sized_files"
path = "generate_sized_files.rs"

[[bin]]
name = "benchmark_parser_scaling"
path = "benchmark_parser_scaling.rs"

[[bin]]
name = "benchmark_plot_scaling"
path = "benchmark_plot_scaling.rs"

[[bin]]
name = "benchmark_healthcare_workloads"
path = "benchmark_healthcare_workloads.rs"

[[bench]]
name = "lexer_simple_benchmark"
path = "lexer_simple_benchmark.rs"

[dependencies]
medic_lexer = { path = "../medic_lexer" }
medic_parser = { path = "../medic_parser" }
medic_ast = { path = "../medic_ast" }
medic_borrowck = { path = "../medic_borrowck" }
medi_data = { path = "../../stdlib/medi_data" }
medi_stats = { path = "../../stdlib/medi_stats" }
medi_compliance = { path = "../../stdlib/medi_compliance" }
medi_ai = { path = "../../stdlib/medi_ai" }
criterion = { version = "0.5", features = ["html_reports"] }
memory-stats = "1.2.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder"] }
plotters-svg = "0.3"
num_cpus = "1.16"
sys-info = "0.9.1"

# Optional LLVM-dependent codegen crate; only enabled for codegen_bench
medic_codegen_llvm = { path = "../medic_codegen_llvm", features = ["llvm"], optional = true }

[features]
default = []
codegen-bench = ["medic_codegen_llvm"]

[[bench]]
name = "parse_profile"
path = "parse_profile.rs"
harness = false
sys-info = "0.9.1"

[[bench]]
name = "codegen_bench"
path = "codegen_bench.rs"
required-features = ["codegen-bench"]
harness = false

[[bench]]
name = "borrow_checker_bench"
path = "borrow_checker_bench.rs"
harness = false
