[package]
name = "medic"
version = "0.0.6"
edition = "2021"

[dependencies]
medic_ast = { path = "../medic_ast" }
medic_env = { path = "../medic_env" }
medic_lexer = { path = "../medic_lexer" }
medic_parser = { path = "../medic_parser" }
medic_type = { path = "../medic_type" }
medic_typeck = { path = "../medic_typeck" }
medic_borrowck = { path = "../medic_borrowck" }
medic_runtime = { path = "../medic_runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
medic_codegen_llvm = { path = "../medic_codegen_llvm", optional = true }

[features]
# Enable the LLVM backend integration (requires system LLVM 15.x)
llvm-backend = ["medic_codegen_llvm/llvm"]

