[package]
name = "medic_ast"
version = "0.1.0"
edition = "2021"
authors = ["Kresna Sucandra <https://github.com/SHA888>"]
description = "Abstract Syntax Tree (AST) for the Medi programming language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MediLang/medi"
readme = "README.md"
keywords = ["ast", "parser", "compiler", "programming-language"]
categories = ["parser-implementations", "compilers"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"

[[example]]
name = "ast_visitor"
path = "examples/ast_visitor_example.rs"
required-features = ["serde"]
