[package]
name = "medic_codegen_llvm"
version = "0.0.13"
edition = "2021"

[features]
# Enable LLVM backend using Inkwell against LLVM 15.x
llvm = ["dep:inkwell", "inkwell/llvm15-0"]
# Experimental: represent quantities as { double, i32 unit_id } in IR
quantity_ir = []
# Experimental: call into medic_runtime GC for string literal allocation (64-bit targets only)
gc-runtime-integration = []

[dependencies]
thiserror = "1.0"
# Inkwell is optional so the workspace builds on machines without LLVM installed.
inkwell = { version = "0.2", optional = true, default-features = false }
medic_ast = { path = "../medic_ast" }
medic_typeck = { path = "../medic_typeck" }
medic_type = { path = "../medic_type" }

[package.metadata]
# Documentation hint: Requires LLVM 15.x when enabling the `llvm` feature.
