[package]
name = "medic_ide_server"
version = "0.0.9"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors"] }

medic_ast = { path = "../medic_ast" }
medic_env = { path = "../medic_env" }
medic_lexer = { path = "../medic_lexer" }
medic_parser = { path = "../medic_parser" }
medic_type = { path = "../medic_type" }
medic_typeck = { path = "../medic_typeck" }
