[package]
name = "medic_lexer"
version = "0.0.9"
edition = "2021"
description = "Lexer for the Medi programming language with support for healthcare-specific syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MediLang/medi/tree/main/compiler/medic_lexer"
documentation = "https://docs.rs/medic_lexer"
keywords = ["lexer", "parser", "healthcare", "programming-language"]
categories = ["parsing", "parser-implementations"]

[dependencies]
log = { version = "0.4.27", optional = true }
logos = { version = "0.14.4", default-features = false, features = ["export_derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], optional = true }

# For precise memory usage tracking
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.4", optional = true }
jemalloc-ctl = { version = "0.5.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"], default-features = false }
medic_parser = { path = "../medic_parser" }  # For parser integration tests
tempfile = "3.9.0"  # For creating temporary files in tests
env_logger = "0.11.3"  # For test logging
proptest = "1.4.0"  # For property-based testing
pretty_assertions = "1.4.0"  # For better test failure output

[features]
default = ["logging"]
logging = ["log"]
serde = ["dep:serde"]
jemalloc = ["jemallocator", "jemalloc-ctl"]
bench = []
# Optional support for single-token pipeline operator `|>`.
# When enabled, the lexer emits a dedicated token for `|>` instead of two tokens ('|' and '>').
pipeline_op = []

[lib]
bench = false
doctest = false
test = true



[profile.dev]
opt-level = 1  # Faster builds with some optimization

[profile.release]
lto = true      # Enable link-time optimization
codegen-units = 1  # Slower builds but better optimization

