[package]
name = "medic_runtime"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1"

[features]
# Enable a simple GC-backed safe zone (stubs for now)
gc = []
# Enable simplified real-time zones (no-alloc stubs for now)
rt_zones = []
# Enable incremental/chunked GC prototype
gc-incremental = []
# Enable card table prototype for generational write barriers
gc-card-table = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "gc_benches"
harness = false
