[package]
name = "medic_typeck"
version = "0.1.1"
edition = "2021"

[dependencies]
medic_type = { path = "../medic_type" }
medic_ast = { path = "../medic_ast" }
medic_env = { path = "../medic_env" }
log = "0.4"
once_cell = "1"

[features]
# Enable experimental quantity-aware type checking (dimension algebra scaffolding, parser fold interop)
quantity_ir = []

