[package]
name = "tlvxc"
version = "0.1.15"
edition = "2021"

[dependencies]
tlvxc_ast = { path = "../tlvxc_ast" }
tlvxc_env = { path = "../tlvxc_env" }
tlvxc_lexer = { path = "../tlvxc_lexer" }
tlvxc_parser = { path = "../tlvxc_parser" }
tlvxc_type = { path = "../tlvxc_type" }
tlvxc_typeck = { path = "../tlvxc_typeck" }
tlvxc_borrowck = { path = "../tlvxc_borrowck" }
tlvxc_runtime = { path = "../tlvxc_runtime" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tlvxc_codegen_llvm = { path = "../tlvxc_codegen_llvm", optional = true }

[dev-dependencies]
tempfile = "3.9.0"

[features]
# Enable the LLVM backend integration (requires system LLVM 15.x)
llvm-backend = ["tlvxc_codegen_llvm/llvm"]

