[package]
name = "tlvxc_borrowck"
version = "0.1.15"
edition = "2021"

[dependencies]
tlvxc_ast = { path = "../tlvxc_ast" }
tlvxc_env = { path = "../tlvxc_env" }
tlvxc_type = { path = "../tlvxc_type" }
thiserror = "1"

[features]
# When enabled, function calls are treated conservatively: borrows inside calls persist to the outer region
# (i.e., call sites do not create an inner region). This can reveal alias flows from functions returning references.
conservative_fn_ref = []
