[package]
name = "tlvxc_parser"
version = "0.1.15"
edition = "2021"

[dependencies]
tlvxc_ast = { path = "../tlvxc_ast" }
tlvxc_lexer = { path = "../tlvxc_lexer" }
nom = { version = "7", features = ["std"] }
log = "0.4"
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4"
env_logger = "0.11"
