[package]
name = "medi_ai"
version = "0.1.15"
edition = "2021"
description = "Medi standard library: AI model interfaces and simple risk scorer"
license = "Apache-2.0"

[lib]
name = "medi_ai"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
