[package]
name = "medi_data"
version = "0.1.0"
edition = "2021"
description = "Medi standard library: healthcare data structures, FHIR, HL7, DICOM, storage"
license = "Apache-2.0"

[lib]
name = "medi_data"
path = "src/lib.rs"

[features]
default = []
encryption-aes-gcm = ["aes-gcm", "rand_core", "hex"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dependencies.aes-gcm]
version = "0.10"
optional = true

[dependencies.rand_core]
version = "0.6"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dev-dependencies]
once_cell = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "query_bench"
harness = false
