[package]
name = "medi_standards"
version = "0.1.4"
edition = "2021"
description = "Medi standard library: healthcare standards (FHIR, HL7, DICOM, terminology)"
license = "Apache-2.0"

[lib]
name = "medi_standards"
path = "src/lib.rs"

[dependencies]
medi_data = { path = "../medi_data" }

[dev-dependencies]
tempfile = "3"
