[package]
name = "medi_stats"
version = "0.1.0"
edition = "2021"
description = "Medi standard library: basic statistical functions"
license = "Apache-2.0"

[lib]
name = "medi_stats"
path = "src/lib.rs"

[features]
pvalue = ["statrs"]

[dev-dependencies]
approx = "0.5"

[dependencies.statrs]
version = "0.16"
optional = true
