[package]
name = "medi_stats"
version = "0.1.2"
edition = "2021"
description = "Medi standard library: basic statistical functions"
license = "Apache-2.0"

[lib]
name = "medi_stats"
path = "src/lib.rs"

[features]
pvalue = ["statrs"]
fhir = ["medi_data"]

[dev-dependencies]
approx = "0.5"

[dependencies]
rand = "0.8"

[dependencies.statrs]
version = "0.16"
optional = true

[dependencies.medi_data]
path = "../medi_data"
optional = true
