[package]
name = "tolvex_standards"
version = "0.1.15"
edition = "2021"
description = "Medi standard library: healthcare standards (FHIR, HL7, DICOM, terminology)"
license = "Apache-2.0"

[lib]
name = "tolvex_standards"
path = "src/lib.rs"

[dependencies]
tolvex_data = { path = "../tolvex_data" }

[dev-dependencies]
tempfile = "3"
